css/style.css
/*Robot font added - Jose*/
@font-face {
    font-family: "Roboto";
    src: url(../fonts/Roboto-Regular.ttf);
}

@font-face {
    font-family: "Roboto";
    src: url(../fonts/Roboto-Bold.ttf);
    font-weight: bold;
}

@font-face {
    font-family: "Roboto";
    src: url(../fonts/Roboto-Italic.ttf);
    font-style: italic;
}

@font-face {
    font-family: "Roboto";
    src: url(../fonts/Roboto-Thin.ttf);
    font-weight: thin;
}

/*Ubuntu font added - Jose*/

@font-face {
    font-family: "Ubuntu";
    src: url(../fonts/Ubuntu-Regular.ttf);
}

@font-face {
    font-family: "Ubuntu";
    src: url(../fonts/Ubuntu-Bold.ttf);
    font-weight: bold;
}

@font-face {
    font-family: "ubuntu";
    src: url(../fonts/Ubuntu-Italic.ttf);
    font-style: italic;
}
/*body color*/
body{
    margin: 0;
    padding: 0;
    background-color: rgb(255, 115, 0);
    padding-bottom: 40px;
    padding-top: 40px;
}

#main-container {
    width: 90%;
    max-width: 1200px;
    margin: 0 auto;
    padding: 20px;
    padding-top: 0px;
    background-image: linear-gradient(white,rgba(255, 255, 255, 0.795), rgba(64, 64, 124, 0.568)); 
    border-radius: 2%;
}

ul {
    overflow: hidden;
    background-color: rgb(85, 170, 209);
    width: 100%;
    padding: 0;
}

li {
    float: left;
}

li a {
    display: block;
    color: black;
    text-align: center;
    padding: 20px 16px;
    font-size: 50px;
    text-decoration: none;
}

img {
    display: block;
    width: 50%;
    margin-left: auto;
    margin-right: auto;
}

/*MxD page css --will change later so it doesnt mess up everyone elses page*/
h1{
    font-weight: bold;
    text-align: left;
    font-size: 80px;
    color:  rgb(255, 115, 0);
    padding-bottom: 10px;
}
h4{
    font-weight: bolder;
    padding-top: 20px;
}
section{
    border: 2px solid;
    background-color: #219EBC;
    padding-top: 10px;
    margin-bottom: 20px;
}
section h1{
    font-size: 40px;
}
section p{
    color: #023047;
}

/* Two Media Queries*/
/*ipad*/
@media (min-width: 768px){

}
  
/*Laptop*/
@media (min-width: 992px){
    /*nav bar*/
    ul {
        overflow: hidden;
        background-color: rgb(85, 170, 209);
    }

    li {
        float: left;
    }

    li a {
        display: block;
        color: black;
        text-align: center;
        padding: 20px 16px;
        font-size: 50px;
        text-decoration: none;
    }

    li a:hover{
        background-color: #023047;
        color: white;
    }

    img {
        height: 100px;
    }
}

